--- a/help/src/hid00007.htm
+++ b/help/src/hid00007.htm
@@ -407,7 +407,7 @@
     </dd>
 
     <dt id="OpenByWin">OpenByWin<span class="pram_text">[_ファイル名[;_ファイル名...]]</span><br>
-      OpenByWin<span class="pram_text">_{&quot;http://～&quot;|&quot;mailto:～&quot;}</span>
+      OpenByWin<span class="pram_text">_{"http://～"|"mailto:～"}</span>
     </dt>
     <dd>選択中(無ければカーソル位置)のファイルを、Windowsの関連付けで開きます。<br>
       アーカイブ内のファイルは、一時ディレクトリ下に解凍したものが開かれます。仮想ディレクトリから抜けると一時ディレクトリのファイルは削除されますので注意してください(排他的に開かれていると削除できず残ります)。<br>
