--- a/help/src/hid00012.htm
+++ b/help/src/hid00012.htm
@@ -85,9 +85,9 @@
     いずれのエディタ指定でも、パスが通っている場合はパス名を省略できます。<br>
     また、フルパスで指定する場合は、以下の書式文字列が使えます。<br>
     　<b>$X</b>　<b>NyanFi</b> の起動パス(末尾の \ は無し)<br>
-    　<b>$D</b>　<b>NyanFi</b> の起動ドライブ(末尾の \ は無し、例: &quot;D:&quot;)<br>
+    　<b>$D</b>　<b>NyanFi</b> の起動ドライブ(末尾の \ は無し、例: "D:")<br>
     　<b>$$</b>　$ そのもの<br>
-    &quot;%変数名%&quot; という書式で環境変数を用いることも可能です。<br>
+    "%変数名%" という書式で環境変数を用いることも可能です。<br>
   </p>
 
   <br><br>
