--- a/help/src/hid00013.htm
+++ b/help/src/hid00013.htm
@@ -36,7 +36,7 @@
       <span class="btn_frame">...</span>ボタンを押すと実行ファイルを参照できます。また、ファイルドロップによる設定も可能です。ショートカット(.lnk)を選んだ場合はリンク先が設定されます(.exe
       の場合のみ)。<br>
       ファイル名の前に <span class="pram_text">:キャプション:</span> という形で文字列を指定すると、ポップアップメニュー表示時のキャプションとして用いられます(例:
-      txt　:メモ帳(&amp;M):C:\Windows\notepad.exe)。アクセラレータキーを設定する場合は、文字列中の任意の位置に &quot;&amp;&quot; + 英数字
+      txt　:メモ帳(&amp;M):C:\Windows\notepad.exe)。アクセラレータキーを設定する場合は、文字列中の任意の位置に "&amp;" + 英数字
       という書式で記述してください。キャプションが無指定の場合は、実行ファイル名主部になります。<br>
       起動オプションなどを指定したい場合は、外部ツールの<b>エイリアス</b>や、<b>コマンド</b>(ExeCommands_SetExeFile ～
       ShellExecute)または<b>コマンドファイル</b>を用いてください。
@@ -59,12 +59,12 @@
     <dd><a href="hid00005.htm#ExeCommands">ExeCommands</a> コマンドを実行します。<br>
       <b>ExeCommands</b><span class="pram_text">_[:説明:]コマンド[:コマンド...]</span> の構文で指定してください。<br>
       説明は、ポップアップメニュー表示時のキャプションとして用いられます。<br>
-      入力欄の内容が &quot;ExeCommands_&quot; で始まる場合、右クリックメニューからコマンド名を参照できます(<a href="hid00005.htm#CopyCmdName">→
+      入力欄の内容が "ExeCommands_" で始まる場合、右クリックメニューからコマンド名を参照できます(<a href="hid00005.htm#CopyCmdName">→
         CopyCmdName</a>)。<br>
     </dd>
 
     <dt class="no_bg">セパレータ</dt>
-    <dd>&quot;-&quot; (ハイフン)を指定すると、メニューのセパレータになります。<br>
+    <dd>"-" (ハイフン)を指定すると、メニューのセパレータになります。<br>
       <br>
     </dd>
   </dl>
