--- a/help/src/hid00014.htm
+++ b/help/src/hid00014.htm
@@ -34,10 +34,10 @@
   <p>
     <b>キャプション</b>、<b>コマンド</b>、<b>パラメータ</b>、<b>アイコン</b>、また必要なら <b>エイリアス</b> を指定して、<span
       class="btn_frame">追加</span>ボタンを押してください。<br>
-    <b>アクセラレータキー</b>を設定する場合は、キャプション文字列中の任意の位置に &quot;&amp;&quot; + 英数字 という書式で記述してください(例:
-    &quot;一時ファイルの削除(&amp;D)&quot;)。<br>
-    キャプションを &quot;-&quot; (ハイフン)にすると<b>セパレータ</b>になります。<br>
-    キャプションの先頭が &quot;&gt;&quot; の場合、<b>サブメニュー</b>が作られ、以降の項目はその階層に入ります。キャプションを &quot;&lt;&quot; とすると階層が戻ります。<br>
+    <b>アクセラレータキー</b>を設定する場合は、キャプション文字列中の任意の位置に "&amp;" + 英数字 という書式で記述してください(例:
+    "一時ファイルの削除(&amp;D)")。<br>
+    キャプションを "-" (ハイフン)にすると<b>セパレータ</b>になります。<br>
+    キャプションの先頭が "&gt;" の場合、<b>サブメニュー</b>が作られ、以降の項目はその階層に入ります。キャプションを "&lt;" とすると階層が戻ります。<br>
     なお、サブメニューの親項目に<b>エイリアス</b>を設定しておくと、呼び出し時にそのサブメニューだけがポップアップ表示されます(関連付けは除く)。
   </p>
 
