--- a/help/src/hid00015.htm
+++ b/help/src/hid00015.htm
@@ -35,9 +35,9 @@
     <b>実行ファイル</b> の<span
       class="btn_frame">...</span>ボタンやファイルドロップでショートカット(.lnk)を選んだ場合は、その内容に基づいて、キャプション、実行ファイル、パラメータ、作業ディレクトリが設定されます(リンク先が
     .exe の場合のみ)。<br>
-    <b>アクセラレータキー</b>を設定する場合は、キャプション文字列中に &quot;&amp;&quot; + 英数字 という書式で記述してください(例: &quot;ファイルを比較(&amp;F)&quot;)。<br>
-    キャプションを &quot;-&quot; (ハイフン)にすると<b>セパレータ</b>になります。<br>
-    キャプションの先頭が &quot;&gt;&quot; の場合、<b>サブメニュー</b>が作られ、以降の項目はその階層に入ります。キャプションを &quot;&lt;&quot; とすると階層が戻ります。<br>
+    <b>アクセラレータキー</b>を設定する場合は、キャプション文字列中に "&amp;" + 英数字 という書式で記述してください(例: "ファイルを比較(&amp;F)")。<br>
+    キャプションを "-" (ハイフン)にすると<b>セパレータ</b>になります。<br>
+    キャプションの先頭が "&gt;" の場合、<b>サブメニュー</b>が作られ、以降の項目はその階層に入ります。キャプションを "&lt;" とすると階層が戻ります。<br>
     なお、サブメニューの親項目に<b>エイリアス</b>を設定しておくと、呼び出し時にそのサブメニューだけがポップアップ表示されます(関連付けやその他のエディタは除く)。
   </p>
   <p>
@@ -64,18 +64,18 @@
     　<b>$Q</b>　反対パス名 (末尾の \ は無し)<br>
     　<b>$R</b>　反対側で選択中なら $O、無選択なら $Q\$B (<a href="hid00005.htm#DiffDir">ディレクトリの比較</a>の結果リストでは反対側カーソル位置のパス付ファイル名)<br>
     　<b>$X</b>　<b>NyanFi</b> の起動パス(末尾の \ は無し)<br>
-    　<b>$D</b>　<b>NyanFi</b> の起動ドライブ(末尾の \ は無し、例: &quot;D:&quot;)<br>
+    　<b>$D</b>　<b>NyanFi</b> の起動ドライブ(末尾の \ は無し、例: "D:")<br>
     　<b>$$</b>　$ そのもの<br>
 
     名前に空白が含まれている場合はダブルクォーテーションで囲まれます。その場合 $P や $Q の直後に文字列があったら、それを含んだ全体が囲まれます。<br>
-    例えばカレントが D:\hoge hogo の場合、$P\test.txt は &quot;D:\hoge hogo\test.txt&quot; になります。
+    例えばカレントが D:\hoge hogo の場合、$P\test.txt は "D:\hoge hogo\test.txt" になります。
   </p>
   <p>
     <b>$F</b>、<b>$O</b>、<b>$R</b> に該当するファイルがアーカイブ内だった場合は一時解凍して渡されます。<br>
     <b>$X</b>、<b>$D</b>、<b>$$</b> は、実行ファイルの指定にも使用できます。<br>
     <b>$P</b>、<b>$Q</b>、<b>$X</b>、<b>$D</b>、<b>$$</b> は、作業ディレクトリの指定にも使用できます。<br>
     <br>
-    なお、実行ファイル、パラメータ、作業ディレクトリには、&quot;%変数名%&quot; という書式で環境変数が使えます。<br>
+    なお、実行ファイル、パラメータ、作業ディレクトリには、"%変数名%" という書式で環境変数が使えます。<br>
   </p>
   <br>
 
