--- a/help/src/hid00016.htm
+++ b/help/src/hid00016.htm
@@ -40,7 +40,7 @@
   <p>
     ファイラーでは、<img src="chkbox.png" alt=""> <b>選択時のみ実行</b>
     を設定できます。チェックしていると、ファイルリストで項目を選択している場合にのみコマンドが実行されます。これを利用すると、同じキーに対し選択状態によって異なるコマンドを割り当てられます。一覧ではキーの前に
-    &quot;<b>SELECT+</b>&quot; と表示されます。
+    "<b>SELECT+</b>" と表示されます。
   </p>
 
   <p>
