--- a/help/src/hid00019.htm
+++ b/help/src/hid00019.htm
@@ -128,7 +128,7 @@
 
       <img src="chkbox.png" alt=""> <b>あいまい検索</b>
       <div class="indent1">
-        検索語の各文字間に任意の文字列があってもマッチする<b>あいまい検索</b>になります。なお半角空白は、AND検索ではなく文字と見なされます。例えば、大小文字の区別が有効な場合、検索語 &quot;NF&quot; は &quot;hogeNF&quot;、&quot;NyanFi&quot; などにマッチします。<br>
+        検索語の各文字間に任意の文字列があってもマッチする<b>あいまい検索</b>になります。なお半角空白は、AND検索ではなく文字と見なされます。例えば、大小文字の区別が有効な場合、検索語 "NF" は "hogeNF"、"NyanFi" などにマッチします。<br>
       </div>
 
       <img src="chkbox.png" alt=""> <b>上下端でループ</b>
@@ -224,11 +224,11 @@
       </div>
       <img src="chkbox.png" alt=""> <b>メニュー定義</b><br>
       <div class="indent1">
-        カーソル位置がメニュー定義ファイル(一行目が &quot;;[MenuFile]&quot;)の場合、<a href="hid00005.htm#ExeMenuFile">ExeMenuFile</a> コマンドで開きます。
+        カーソル位置がメニュー定義ファイル(一行目が ";[MenuFile]")の場合、<a href="hid00005.htm#ExeMenuFile">ExeMenuFile</a> コマンドで開きます。
       </div>
       <img src="chkbox.png" alt=""> <b>結果リスト</b><br>
       <div class="indent1">
-        カーソル位置が結果リストファイル(一行目が &quot;;[ResultList]&quot;)の場合、<a href="hid00005.htm#LoadResultList">LoadResultList</a>
+        カーソル位置が結果リストファイル(一行目が ";[ResultList]")の場合、<a href="hid00005.htm#LoadResultList">LoadResultList</a>
         コマンドで開きます。
       </div>
       <br>
