--- a/help/src/hid00020.htm
+++ b/help/src/hid00020.htm
@@ -186,7 +186,7 @@
     <dt class="no_bg_indent1">キャッシュしないパス(前方一致) <img src="edit.png" alt=""></dt>
     <dd>
       ここで指定したパス以下では、キャッシュの保存を行いません。<br>
-      ドライブ名から始まるフルパスで指定します。<b>;</b> (セミコロン)で区切って複数指定可能です。前方一致なので、完全なパスの形式になっていなくてもかまいません。例えば &quot;<b>\\</b>&quot;
+      ドライブ名から始まるフルパスで指定します。<b>;</b> (セミコロン)で区切って複数指定可能です。前方一致なので、完全なパスの形式になっていなくてもかまいません。例えば "<b>\\</b>"
       を指定すると、すべてのUNCパスにマッチします。<br>
       また、通常のパス指定以外に以下の書式文字列によるドライブ指定も可能です。<br>
       <div class="indent1">
