--- a/help/src/hid00021.htm
+++ b/help/src/hid00021.htm
@@ -377,7 +377,7 @@ AppendBuffer_%ExePath%CLIPMEMO.TXT
       <b>例</b>: <span class="inp_box">!3M</span> <span class="inp_box">WinMinimize</span>　3分間無操作だったら最小化<br>
       <br>
       <b>hh:mm[:ss]</b> の書式だと時刻指定になります。<b>,</b> (カンマ)で区切って最大6つまで時刻を指定できます。<br>
-      先頭(時)が &quot;??:&quot; の場合、毎時の設定になります。また、設定時刻を過ぎると、翌日の時刻として再設定されます。<br>
+      先頭(時)が "??:" の場合、毎時の設定になります。また、設定時刻を過ぎると、翌日の時刻として再設定されます。<br>
       <b>例</b>: <span class="inp_box">09:30,12:00,17:45</span> <span
         class="inp_box">PlaySound_アラーム.wav</span>　9:30、12:00、17:45 にアラーム音を鳴らす<br>
       <b>例</b>: <span class="inp_box">??:00,17:30</span> <span class="inp_box">PlaySound_アラーム.wav</span>　毎正時と17:30
