--- a/help/src/hid00024.htm
+++ b/help/src/hid00024.htm
@@ -53,7 +53,7 @@
     <dt class="no_bg_indent1">情報を取得しないパス(前方一致) <img src="edit.png" alt=""></dt>
     <dd>
       ここで指定したパス以下では、表示用のファイル情報(テキストプレビューを含む)を取得しません。これは、拡張子に対する設定よりも優先されます。<br>
-      ドライブ名から始まるフルパスで指定します。<b>;</b> (セミコロン)で区切って複数指定可能です。前方一致なので、完全なパスの形式になっていなくてもかまいません。例えば &quot;<b>\\</b>&quot;
+      ドライブ名から始まるフルパスで指定します。<b>;</b> (セミコロン)で区切って複数指定可能です。前方一致なので、完全なパスの形式になっていなくてもかまいません。例えば "<b>\\</b>"
       を指定すると、すべてのUNCパスにマッチします。<br>
       また、通常のパス指定以外に以下の書式文字列によるドライブ指定も可能です。カレント(UNCの場合を除く)のドライブが該当する場合、ファイル情報を取得しません。<br>
       <div class="indent1">
@@ -108,7 +108,7 @@
     <dt class="no_bg_indent1">プレビューを行わないパス(前方一致) <img src="edit.png" alt=""></dt>
     <dd>
       ここで指定したパス以下では、イメージプレビューを行いません(拡張子に対する設定よりも優先)。<br>
-      ドライブ名から始まるフルパスで指定します。<b>;</b> (セミコロン)で区切って複数指定可能です。前方一致なので、完全なパスの形式になっていなくてもかまいません。例えば &quot;<b>\\</b>&quot;
+      ドライブ名から始まるフルパスで指定します。<b>;</b> (セミコロン)で区切って複数指定可能です。前方一致なので、完全なパスの形式になっていなくてもかまいません。例えば "<b>\\</b>"
       を指定すると、すべてのUNCパスにマッチします。<br>
       また、通常のパス指定以外に以下の書式文字列によるドライブ指定も可能です。カレント(UNCの場合を除く)のドライブが該当する場合、プレビューを行いません。<br>
       <div class="indent1">
@@ -145,7 +145,7 @@
 
     <dt class="no_bg_indent1"><img src="chkbox.png" alt=""> ZIP内の画像を表示</dt>
     <dd>ZIPアーカイブ(<b>.zip</b>、<b>.cbz</b>、<b>.epub</b>、<b>.gdtf</b> に対応)内に適当な画像があれば、それを表示します。<br>
-      複数の画像がある場合、ファイル名に &quot;thumbnail&quot;、&quot;cover&quot;、&quot;title&quot;、&quot;page&quot; が含まれるものを優先します。<br>
+      複数の画像がある場合、ファイル名に "thumbnail"、"cover"、"title"、"page" が含まれるものを優先します。<br>
       パスワードが設定されている場合や、実行ファイルなどが含まれているアーカイブでは表示されません。<br>
       なおこの設定にかかわらず、すべての種類のアーカイブで、 <b>thumbnail.jpg</b> という名前の代替データストリームがある場合、それが優先的に表示されます。<br>
     </dd>
@@ -298,7 +298,7 @@
     </dd>
 
     <dt class="no_bg_indent1"><img src="chkbox.png" alt=""> ユーザ名別に作成</dt>
-    <dd>チェックすると、現在のユーザ名にしたがって &quot;<b>.nyanfi</b>_ユーザ名&quot; という名前で<a href="hid00075.htm">.nyanfi
+    <dd>チェックすると、現在のユーザ名にしたがって "<b>.nyanfi</b>_ユーザ名" という名前で<a href="hid00075.htm">.nyanfi
         ファイル</a>を作成し、それを適用します。<br>
       共有フォルダを複数ユーザで利用するような場合、ユーザごとに設定を分けられます。<br>
     </dd>
