--- a/help/src/hid00050.htm
+++ b/help/src/hid00050.htm
@@ -35,7 +35,7 @@
         コマンドで行ってください。別のディレクトリに移動した場合にも解除されます。ワークリストの場合は、通常のファイルリスト表示に戻すと解除されます。また、パラメータに <b>CA</b>
         を指定すると、実行前に選択マスクを解除できます。<br>
         <div class="note_text">
-          選択マスクが適用された状態のワークリストでは、内容の変更や上書き保存は行えません。注意を促すため、ディレクトリ情報に &quot;<b>!</b>&quot; マークが表示されます。
+          選択マスクが適用された状態のワークリストでは、内容の変更や上書き保存は行えません。注意を促すため、ディレクトリ情報に "<b>!</b>" マークが表示されます。
         </div>
       </div>
 
@@ -79,14 +79,14 @@
     <dd>
       ファイラーの <a href="hid00005.htm#DirHistory">DirHistory</a>_FM コマンドで<a
         href="hid00057.htm">ディレクトリ履歴</a>を開くと、全体としての履歴をインクリメンタルサーチ・モードで絞り込み表示できます。<br>
-      複数のキーワードを空白で区切って入力するとAND検索、&quot;<b>|</b>&quot; で区切るとOR検索になります。大文字を入力すると、大小文字を区別します。<br>
+      複数のキーワードを空白で区切って入力するとAND検索、"<b>|</b>" で区切るとOR検索になります。大文字を入力すると、大小文字を区別します。<br>
     </dd>
 
     <dt class="no_bg">タグ名検索</dt>
     <dd>
       ファイラーまたは<a href="hid00006.htm">テキストビュアー</a>の <a href="hid00005.htm#FindTagName">FindTagName</a> コマンドで<a
         href="hid00083.htm#Dialog">タグ名検索ダイアログ</a>を開いた場合、インクリメンタルサーチ・モードで項目を絞り込み表示できます。<br>
-      複数のキーワードを空白で区切って入力するとAND検索、&quot;<b>|</b>&quot; で区切るとOR検索になります。大文字を入力すると、大小文字を区別します。<br>
+      複数のキーワードを空白で区切って入力するとAND検索、"<b>|</b>" で区切るとOR検索になります。大文字を入力すると、大小文字を区別します。<br>
     </dd>
 
     <dt class="no_bg">ランチャー</dt>
