--- a/help/src/hid00053.htm
+++ b/help/src/hid00053.htm
@@ -23,8 +23,8 @@
 
   <dl>
     <dt class="no_bg_indent1"><img src="combobox.png" alt=""> マスク</dt>
-    <dd>必用ならマスクを指定します。マスクには &quot;<b>*</b>&quot; または &quot;<b>?</b>&quot; のワイルドカード文字を含めることができます。<br>
-      空欄の場合は &quot;<b>*</b>&quot; とみなされます。<br>
+    <dd>必用ならマスクを指定します。マスクには "<b>*</b>" または "<b>?</b>" のワイルドカード文字を含めることができます。<br>
+      空欄の場合は "<b>*</b>" とみなされます。<br>
       <br>
     </dd>
 
@@ -91,7 +91,7 @@
   </p>
   <p>
     項目上で<span class="btn_frame">ENTER</span>キーを押すと、結果リストから抜けて、そのディレクトリに移動します。<br>
-    通常のファイルリスト表示に戻るには、<span class="btn_frame">ESC</span>キーを押すか、&quot;<b>..</b>&quot; で<span
+    通常のファイルリスト表示に戻るには、<span class="btn_frame">ESC</span>キーを押すか、"<b>..</b>" で<span
       class="btn_frame">ENTER</span>キーを押してください。<br>
     <a href="hid00005.htm#ReturnList">ReturnList</a> コマンドや <a href="hid00005.htm#ToParent">ToParent</a> コマンドでも戻れます。<br>
     なお、<span class="btn_frame">ESC</span>キーに <a href="hid00005.htm#ExeCommands">ExeCommands</a>
