--- a/help/src/hid00054.htm
+++ b/help/src/hid00054.htm
@@ -51,7 +51,7 @@
       <b>RegDirDlg</b>_AD で開いた場合は<span class="btn_frame">挿入</span>ボタン(<span
         class="btn_frame">変更</span>ボタンが変化)でカーソル位置への挿入も可能です。<br>
       一つの呼び出しキーに対して複数のディレクトリを登録することもできます。<br>
-      名前を &quot;-&quot; (ハイフン)にすると<b>セパレータ</b>になります。<br>
+      名前を "-" (ハイフン)にすると<b>セパレータ</b>になります。<br>
       一覧で選択されている項目の内容を変更したい場合は<span class="btn_frame">変更</span>ボタンを、削除したい場合は<span
         class="btn_frame">削除</span>ボタンを押してください。また、<span class="btn_frame">↑</span>/<span
         class="btn_frame">↓</span>ボタンで、項目を上下に移動できます。<br>
@@ -62,11 +62,11 @@
         class="btn_frame">Alt</span>+<span class="btn_frame">O</span>キーでも可)で設定パネルを開閉できます。<br>
 
       <div class="spc_box">
-        ディレクトリ名には、&quot;%変数名%&quot; という書式で環境変数が使えます。<br>
+        ディレクトリ名には、"%変数名%" という書式で環境変数が使えます。<br>
         　<b>例</b>: <span class="inp_box">%USERPROFILE%\Documents\</span><br>
         また、以下の書式文字列が使えます。<br>
         　<b>$X</b>　<b>NyanFi</b> の起動パス(末尾の \ は無し)<br>
-        　<b>$D</b>　<b>NyanFi</b> の起動ドライブ(末尾の \ は無し、例: &quot;D:&quot;)<br>
+        　<b>$D</b>　<b>NyanFi</b> の起動ドライブ(末尾の \ は無し、例: "D:")<br>
         　<b>$$</b>　$ そのもの<br>
       </div>
 
@@ -81,12 +81,12 @@
       </div>
 
       <div class="spc_box">
-        先頭に &quot;<b>shell:</b>&quot; を付けると特殊フォルダを指定でき、エクスプローラで開きます。<br>
+        先頭に "<b>shell:</b>" を付けると特殊フォルダを指定でき、エクスプローラで開きます。<br>
         　<b>例</b>: <span class="inp_box">shell:ControlPanelFolder</span>　コントロールパネルを開く<br>
       </div>
 
       <div class="spc_box">
-        先頭に &quot;<b>#:</b>&quot; を付けると、タグ検索(<a href="hid00005.htm#FindTag">FindTag</a>)を行えます。<br>
+        先頭に "<b>#:</b>" を付けると、タグ検索(<a href="hid00005.htm#FindTag">FindTag</a>)を行えます。<br>
         複数のタグを指定する場合、; (セミコロン)で区切るとAND検索、| で区切るとOR検索になります(混在不可)。<br>
         タグ検索の結果リストからダイアログを開くと、その条件が自動的に入力されます。<br>
         　<b>例</b>: <span class="inp_box">#:Hoge|Nyan</span>　Hoge または Nyan を検索<br>
