--- a/help/src/hid00056.htm
+++ b/help/src/hid00056.htm
@@ -69,7 +69,7 @@
       <div class="note_text">
         ※<b>Migemo</b> モードだと処理が重くなります。フィルタ欄には日本語も入力できるので、項目数が多い場合は通常モードにした方がよいでしょう。<br>
       </div>
-      <img src="chkbox.png" alt=""> <b>AND/OR</b> をチェックしていると、複数のキーワードを空白で区切って入力した場合にAND検索、&quot;<b>|</b>&quot;
+      <img src="chkbox.png" alt=""> <b>AND/OR</b> をチェックしていると、複数のキーワードを空白で区切って入力した場合にAND検索、"<b>|</b>"
       で区切るとOR検索で絞り込めます。区切りが混在しているその場合は、空白(AND)の方が | (OR)よりも優先順位が高くなります。<br>
       なお、大小文字は区別されません。<br>
       入力欄の幅は、状態表示との間にある境界線をドラッグすることで変更できます。<br>
@@ -205,9 +205,9 @@
     <dd>結果出力後に、外部アプリケーションを起動したい場合に設定してください。チェックを外していると起動しません。<br>
       実行ファイル名には以下の書式文字列が使えます。<br>
       　<b>$X</b>　<b>NyanFi</b> の起動パス(末尾の \ は無し)<br>
-      　<b>$D</b>　<b>NyanFi</b> の起動ドライブ(末尾の \ は無し、例: &quot;D:&quot;)<br>
+      　<b>$D</b>　<b>NyanFi</b> の起動ドライブ(末尾の \ は無し、例: "D:")<br>
       　<b>$$</b>　$ そのもの<br>
-      また &quot;%変数名%&quot; という書式で環境変数を用いることも可能です。<br>
+      また "%変数名%" という書式で環境変数を用いることも可能です。<br>
       出力ファイルを渡したい場合は、<b>パラメータ</b>に書式文字列 <b>$F</b> を指定してください。また既存ファイルに追加する場合、<b>$L</b> (行番号) も指定すると、追加した先頭位置に移動できます。<br>
       <br>
     </dd>
@@ -219,13 +219,13 @@
 
     <dt class="no_bg_indent1">ファイル情報の書式 <img src="edit.png" alt=""></dt>
     <dd>ファイル名や行番号の書式を指定します。<br>
-      書式には以下の書式文字列を使えます。空欄の場合は &quot;<b>$F $L:</b>&quot; とみなされます。<br>
+      書式には以下の書式文字列を使えます。空欄の場合は "<b>$F $L:</b>" とみなされます。<br>
       　<b>$F</b> : パス付ファイル名<br>
       　<b>$B</b> : パス無しファイル名<br>
       　<b>$L</b> : 行番号<br>
       　<b>\t</b> : タブ<br>
       　<b>\n</b> : 改行<br>
-      　<b>\s</b> : 空白 (&quot; &quot; でよいのですが、わかりやするために)<br>
+      　<b>\s</b> : 空白 (" " でよいのですが、わかりやするために)<br>
       　<b>\\</b> : \ そのもの<br>
     </dd>
 
