--- a/help/src/hid00057.htm
+++ b/help/src/hid00057.htm
@@ -67,9 +67,9 @@
     <dt class="no_bg">インクリメンタルサーチ</dt>
     <dd>
       コマンドのパラメータに <b>FM</b> を指定した場合、全体としての履歴をソートして表示しますが、文字列を入力すると、それが含まれるディレクトリをインクリメンタルサーチモードで絞り込むことができます。<br>
-      複数のキーワードを空白で区切って入力すると<b>AND</b>検索、&quot;<b>|</b>&quot; で区切ると<b>OR</b>検索になります。区切りが混在しているその場合は、空白(AND)の方が |
+      複数のキーワードを空白で区切って入力すると<b>AND</b>検索、"<b>|</b>" で区切ると<b>OR</b>検索になります。区切りが混在しているその場合は、空白(AND)の方が |
       (OR)よりも優先順位が高くなります。<br>
-      <b>例</b>: &quot;dat&quot; と &quot;nyan&quot; の両方が含まれているか、&quot;usr&quot; と &quot;nyan&quot; の両方が含まれている。<br>
+      <b>例</b>: "dat" と "nyan" の両方が含まれているか、"usr" と "nyan" の両方が含まれている。<br>
       　<span class="inp_box">dat nayn|usr nyan</span><br>
       なおディレクトリ区切りは <b>\</b> と <b>/</b> のどちらでもマッチします。<br>
 
