--- a/help/src/hid00071.htm
+++ b/help/src/hid00071.htm
@@ -30,7 +30,7 @@
     <dt class="no_bg_indent1">対象マスク <img src="combobox.png" alt=""></dt>
     <dd>バックアップするファイルのマスクを指定します。<br>
       マスクは <b>;</b> (セミコロン)で区切って複数指定できます。<br>
-      何も指定しないと &quot;*&quot; とみなされ、すべてのファイルがバックアップ対象となります。<br>
+      何も指定しないと "*" とみなされ、すべてのファイルがバックアップ対象となります。<br>
       <b>例</b>: <span class="inp_box">*.cpp;*.c;*.h;*.txt;*.ico</span>
     </dd>
 
