--- a/help/src/hid00073.htm
+++ b/help/src/hid00073.htm
@@ -112,7 +112,7 @@
       <div class="note_text">
         ※<b>Migemo</b> モードだと処理が重くなります。フィルタ欄には日本語も入力できるので、行数が多い場合は通常モードにした方がよいでしょう。<br>
       </div>
-      <span class="btn_frame">AND/OR</span>が有効だと、複数のキーワードを空白で区切って入力した場合にAND検索、&quot;<b>|</b>&quot;
+      <span class="btn_frame">AND/OR</span>が有効だと、複数のキーワードを空白で区切って入力した場合にAND検索、"<b>|</b>"
       で区切るとOR検索で絞り込めます。区切りが混在しているその場合は、空白(AND)の方が | (OR)よりも優先順位が高くなります。<br>
       <span class="btn_frame">強調</span>が有効だと、フィルタ欄の文字列にマッチした語が強調表示されます。<br>
 
