--- a/help/src/hid00074.htm
+++ b/help/src/hid00074.htm
@@ -47,8 +47,8 @@
   </p>
 
   <p>
-    ファイラーで左右が互いに同期ディレクトリの関係にあるとき、ディレクトリ関係表示が &quot;*&quot; で囲まれます(例 &quot;*∽*&quot;)。<br>
-    また同期関係になくても、登録されているディレクトリ下の場合、&quot;+&quot; が表示されます(例 &quot; ≠+&quot;)。
+    ファイラーで左右が互いに同期ディレクトリの関係にあるとき、ディレクトリ関係表示が "*" で囲まれます(例 "*∽*")。<br>
+    また同期関係になくても、登録されているディレクトリ下の場合、"+" が表示されます(例 " ≠+")。
   </p>
   <br><br>
 
