--- a/help/src/hid00075.htm
+++ b/help/src/hid00075.htm
@@ -30,7 +30,7 @@
     また、別のタブに移ったとき、反対側ディレクトリに対しても、ソート方法(SortMode)とパスマスク(PathMask)については、その <b>.nyanfi</b> 設定が適用されます。<br>
     <a href="hid00024.htm#Other">オプション設定 - 一般2 - その他</a> で「<b>.nyanfi がない場合、上位から継承</b>」がチェックされていると、移動したディレクトリに
     <b>.nyanfi</b> がなかった場合、親ディレクトリへ(ルートまで)さかのぼって検索し、見つかったらその内容を適用します。<br>
-    また、「<b>ユーザ名別を作成</b>」がチェックされていると、現在のユーザ名にしたがって &quot;<b>.nyanfi</b>_ユーザ名&quot; という名前で <b>.nyanfi</b>
+    また、「<b>ユーザ名別を作成</b>」がチェックされていると、現在のユーザ名にしたがって "<b>.nyanfi</b>_ユーザ名" という名前で <b>.nyanfi</b>
     ファイルを作成し、それを適用します。これにより、共有フォルダを複数ユーザで利用するような場合、ユーザごとに設定を分けられます。
   </p>
 
