--- a/help/src/hid00076.htm
+++ b/help/src/hid00076.htm
@@ -132,7 +132,7 @@
         href="hid00050.htm#ClearIncKeyword">ClearIncKeyword</a> コマンドが割り当てられているキーでキーワードがクリアされます。<br>
       キーワードが変化すると、ランチャーのトップディレクトリ以下にあるすべての項目からマッチするものをリストに一覧表示します(<a href="hid00005.htm#AppList">AppList</a>_AS
       でスタートメニュー下の全項目も検索対象に)。<br>
-      なお、&quot;<b>*</b>&quot;、&quot;<b>?</b>&quot;、&quot;<b> </b>&quot; のいずれかを入力すると、すべての項目が表示されます。<br>
+      なお、"<b>*</b>"、"<b>?</b>"、"<b> </b>" のいずれかを入力すると、すべての項目が表示されます。<br>
       マッチした項目が複数ある場合、<span class="btn_frame">↓</span>/<span class="btn_frame">↑</span>キー、または <a
         href="hid00050.htm#IncSearchDown">IncSearchDown</a>/ <a href="hid00050.htm#IncSearchUp">IncSearchUp</a>
       コマンドが割り当てられているキーでカーソルを移動できます。<br>
@@ -157,7 +157,7 @@
       <div class="spc_box">
         右クリックメニューの「<b>フォルダアイコンでソート</b>」がチェックされていると、ディレクトリが、設定されているフォルダアイコンのファイル名に基づいてソートされます。<br>
         「<b>コメントでソート</b>」がチェックされていると、ショートカット(<b>.lnk</b>)に設定されているコメント(プロパティで編集)によってソートされます。<br>
-        先頭に番号などを付ければ、ショートカットを任意の順番に並べられます。また、コメントの末尾に &quot;<b>-</b>&quot; があると、項目の下端に分割線が表示されます。<br>
+        先頭に番号などを付ければ、ショートカットを任意の順番に並べられます。また、コメントの末尾に "<b>-</b>" があると、項目の下端に分割線が表示されます。<br>
       </div>
     </dd>
   </dl>
