--- a/help/src/hid00080.htm
+++ b/help/src/hid00080.htm
@@ -41,7 +41,7 @@
         <dd>ホストのログイン用ユーザIDです。</dd>
 
         <dt class="no_bg"><img src="chkbox.png" alt=""> anonymous</dt>
-        <dd>匿名FTPサーバに接続する場合にチェックします。ユーザID が &quot;anonymous&quot; になります。</dd>
+        <dd>匿名FTPサーバに接続する場合にチェックします。ユーザID が "anonymous" になります。</dd>
 
         <dt class="no_bg">パスワード <img src="edit.png" alt=""></dt>
         <dd>ホストのログイン用パスワードです。<br>
