--- a/help/src/hid00087.htm
+++ b/help/src/hid00087.htm
@@ -42,7 +42,7 @@
       <div class="spc_box">
         <b>16進整数</b><br>
         <div class="indent1">
-          &quot;<b>0x</b>&quot; で始まる数値は、16進数とみなされます。式中の数値が全て16進表記の場合は、答えも16進表記になります。<br>
+          "<b>0x</b>" で始まる数値は、16進数とみなされます。式中の数値が全て16進表記の場合は、答えも16進表記になります。<br>
           　<b>例</b>: <span class="inp_box">0x100+0xff = 0x1ff</span><br>
           単独の整数を入力すると、16進/10進が交互に変換されます(<a href="#ToolBtn">ツールボタン</a>でも可能)。<br>
           　<b>例</b>: <span class="inp_box">0x7fff = 32767</span><br>
@@ -258,13 +258,13 @@
     <dt class="no_bg" id="UserDef">ユーザ定義ファイル</dt>
     <dd>
       関数および定数は、ファイルでユーザ定義することができます。<br>
-      定義ファイルは、<b>NyanFi</b> 実行ディレクトリに &quot;<b>Calculator.INI</b>&quot; という名前で作成してください。<span
+      定義ファイルは、<b>NyanFi</b> 実行ディレクトリに "<b>Calculator.INI</b>" という名前で作成してください。<span
         class="btn_frame">DEFINE</span>ボタンのメニューで「<b>定義ファイルの編集</b>」を選べは、新規作成された定義ファイルがテキストエディタで開かれます。<br>
       書式は一般的なINIファイルと同様です。<br>
       <div class="spc_box">
         <b>関数</b>のマクロ定義は、[Function] セクションに <span class="format_text">関数名(引数1[,引数2,引数3...])=定義式 <span
             class="ctrl_text">[TAB]</span> 説明</span> という書式で記述します(説明は省略可)。<br>
-        関数名は、英数字および &quot;_&quot; で定義してください。大文字・小文字は区別されません。実際の計算式では、括弧を用いた表記で使用してください。<br>
+        関数名は、英数字および "_" で定義してください。大文字・小文字は区別されません。実際の計算式では、括弧を用いた表記で使用してください。<br>
         計算式にユーザ定義関数があると、定義にしたがってそれを展開してから実際の計算が行われます。その際、引数は括弧で囲んだ形に展開されます。例えば、SQRT(X)=X^0.5 と定義した場合、SQRT(2+3) は
         (2+3)^0.5 に展開されるため、定義の際に演算子の優先順位による影響を考慮する必要はありません。<br>
 
