--- a/help/src/hid00088.htm
+++ b/help/src/hid00088.htm
@@ -93,8 +93,8 @@
 
     <dt class="no_bg">タグデータ</dt>
     <dd>
-      タグに関するデータは、<b>NyanFi</b> 実行ディレクトリの <b>TAGDATA.TXT</b> というファイルに、&quot;ファイル名またはディレクトリ名 <span
-        class="ctrl_text">[TAB]</span> タグ&quot; という書式で保存されています。<br>
+      タグに関するデータは、<b>NyanFi</b> 実行ディレクトリの <b>TAGDATA.TXT</b> というファイルに、"ファイル名またはディレクトリ名 <span
+        class="ctrl_text">[TAB]</span> タグ" という書式で保存されています。<br>
       このファイルは、タグを変更するたびに更新されます。また、外部による変更によってタイムスタンプが変化していた場合、コマンド実行前に再読み込みされます。<br>
 
       <div class="spc_box">
