--- a/help/src/hid00103.htm
+++ b/help/src/hid00103.htm
@@ -23,7 +23,7 @@
     <li>ファイル名も暗号化されている<b>RAR</b>アーカイブは、カーソルを置いただけでパスワードを求めるダイアログが出てしまいます。unrar64.dll の API
       だけでは、ダイアログを出さずにパスワード有無を確認できないようです。ソースを調べれば方法はありそうなのですが、自分ではRARは使っていませんし、あまり大変なことはやりたくありません(簡単な方法があれば教えてください)。<br>
       ということで、どうしてもダイアログを出したくない場合は、<a href="hid00024.htm#FileInfo">オプション設定 - 一般2 - ファイル情報</a> の「<b>情報を取得しない拡張子</b>」に
-      &quot;<b>.rar</b>&quot; を指定してください。
+      "<b>.rar</b>" を指定してください。
     </li>
   </ul>
   <br><br>
