--- a/help/src/hid00109.htm
+++ b/help/src/hid00109.htm
@@ -42,6 +42,13 @@
   </div>
 
   <dl>
+    <dt>V16.04 <span class="ver_date">(2023-12-01)</span></dt>
+    <dd>
+      ・正規表現チェッカーの右側にある正規表現の参照とサンプルパターンを上下に分割し、下部の内容を右クリックメニューでファイルから読み込めるようにしました。なお、サンプルファイルを編集してタイムスタンプが変化した場合、チェッカーがアクティブになったとき自動的に再読み込みされます。<br>
+      ・RIFFファイル(.wav、.cda、.rmi、.ani、.avi)のファイル情報に「チャンク」を追加。ファイルに含まれるチャンク名を順に列挙します。<br>
+      ・.exe のファイル情報取得に時間がかかる場合があったのを少し改善。<br>
+    </dd>
+
     <dt>V16.03 <span class="ver_date">(2023-11-29)</span></dt>
     <dd>
       ・正規表現チェッカーのパターン欄の下に、入力内容の構文構造を表すカラーバーを追加しました。<br>
