--- a/help/src/hid00008.htm
+++ b/help/src/hid00008.htm
@@ -124,7 +124,7 @@
       <hr>
 
       <div class="spc_box">
-        各種パスの設定欄では、&quot;%変数名%&quot; という書式で環境変数や<a href="hid00063.htm#PreDefVar">定義済み変数</a>の <b>ExePath</b> を使えます。<br>
+        各種パスの設定欄では、"%変数名%" という書式で環境変数や<a href="hid00063.htm#PreDefVar">定義済み変数</a>の <b>ExePath</b> を使えます。<br>
       </div>
       <hr>
       <br>
