--- a/help/src/hid00010.htm
+++ b/help/src/hid00010.htm
@@ -259,12 +259,12 @@
       　<b>$SI</b>　項目選択数 ($SD + $SF)<br>
       　<b>$SZ</b>　選択項目の合計サイズ<br>
       　<b>$SB</b>　選択項目の合計サイズ(バイト単位)<br>
-      　<b>$AD</b>　全ディレクトリ選択時に &quot;All&quot; を表示<br>
-      　<b>$AF</b>　全ファイル選択時に &quot;All&quot; を表示<br>
-      　<b>$TP</b>　ファイルリストのページ数 (&quot;..&quot; は除いて計算)<br>
+      　<b>$AD</b>　全ディレクトリ選択時に "All" を表示<br>
+      　<b>$AF</b>　全ファイル選択時に "All" を表示<br>
+      　<b>$TP</b>　ファイルリストのページ数 (".." は除いて計算)<br>
       　<b>$CP</b>　カーソル位置のページ<br>
-      　<b>$TI</b>　ファイルリストリストの項目総数 (&quot;..&quot; は除く)<br>
-      　<b>$CI</b>　カーソル位置 (&quot;..&quot; は 0)<br>
+      　<b>$TI</b>　ファイルリストリストの項目総数 (".." は除く)<br>
+      　<b>$CI</b>　カーソル位置 (".." は 0)<br>
       　<b>$SM</b>　ソートモード(名前、拡張子、日時、サイズ、属性、なし、場所)<br>
       　<b>$S2</b>　ソートモード(名、拡、時、サ、属、無、場)<br>
       　<b>$HS</b>　隠しファイル表示で H、システムファイル表示で S、非表示は _　(全体で共通)<br>
@@ -312,7 +312,7 @@
       </div>
       　<b>$DV</b>　これ以降の内容を分割して右寄せで表示<br>
       <br>
-      <b>例</b> <span class="inp_box">$F2$DV$PR(ファイルVer.,v)$PR(画像サイズ)$PR(長さ)$PR(タイトル,&quot; 『&quot;,』)</span>
+      <b>例</b> <span class="inp_box">$F2$DV$PR(ファイルVer.,v)$PR(画像サイズ)$PR(長さ)$PR(タイトル," 『",』)</span>
       <pre>
 <span class="scr_box">D:/Music/Hiroko/03_NekoMori.mp3            00:03:41  『ねこの森には帰れない』</span>
 <span class="scr_box">D:/Photo/140909/DSC_1234.jpg                              960 × 720  (4 : 3)</span>
@@ -339,13 +339,13 @@
           <dt class="no_bg_indent1">$CD(<span class="pram_text">yyyy/mm/dd[;タイトル]</span>)<br>
             $CD(<span class="pram_text">[+|-][mm/]dd[;タイトル]</span>)</dt>
           <dd>
-            yyyy/mm/dd 形式で指定した日付までの日数を、&quot;タイトルまで(から)n日&quot; の形式で表示します。<br>
+            yyyy/mm/dd 形式で指定した日付までの日数を、"タイトルまで(から)n日" の形式で表示します。<br>
             タイトルを指定しないと指定した日付が表示されます。<br>
             なお $CD は複数指定できます。<br>
 
             <div class="spc_box">
               2番目の書式のように年を省略すると今年、月も省略すると今月の日付とみなされます。<br>
-              この場合、日付の先頭に &quot;<b>+</b>&quot; があれば「～まで」、&quot;<b>-</b>&quot;
+              この場合、日付の先頭に "<b>+</b>" があれば「～まで」、"<b>-</b>"
               があれば「～から」の表示になるように、対象となる年/月が前後に調整されます。なお指定日が対象月の日数より大きくなる場合は月末の日付に自動修正されます。<br>
             </div>
             <b>例</b> <span class="inp_box">$CD(yyyy/mm/dd 1958/08/02;生誕) $CD(31;月末)</span>
