--- a/help/src/hid00011.htm
+++ b/help/src/hid00011.htm
@@ -205,9 +205,9 @@
       <div class="indent1">
         チェックすると、Markdown記法に準じた変換を行います。<br>
         「<b>見出し文字</b>」の設定は無効となり、<b>#</b> を用いた表記で変換されます。<br>
-        画像は &quot;![alt属性](ファイル名)&quot; という形で挿入されます(alt無指定の場合&quot;画像&quot;)。<br>
-        定義リストでは、<b>dd</b> 要素の前に &quot;:&nbsp;&nbsp;&nbsp;&quot; が挿入されます。<br>
-        <b>table</b> には対応していませんが、&quot;---- ---- ～&quot; という形の区切りが挿入されます。<br>
+        画像は "![alt属性](ファイル名)" という形で挿入されます(alt無指定の場合"画像")。<br>
+        定義リストでは、<b>dd</b> 要素の前に ":&nbsp;&nbsp;&nbsp;" が挿入されます。<br>
+        <b>table</b> には対応していませんが、"---- ---- ～" という形の区切りが挿入されます。<br>
         なお、<a href="hid00006.htm#HtmlToText">HtmlToText</a> コマンドのパラメータでこの設定を切り替えることもできます(<b>MD</b> で有効、<b>TX</b> で無効)。
       </div>
       <hr><br>
@@ -227,15 +227,15 @@
     </dd>
 
     <dt class="no_bg"><img src="chkbox.png" alt=""> 青空文庫形式に対応する</dt>
-    <dd>&quot;［＃～］&quot; という書式を含むテキストファイル(.txt)を青空文庫形式とみなし、以下のように表示します。<br>
-      &quot;［＃～］&quot; 部分はコメント色で、&quot;《～》&quot; 部分はルビ色で表示します(色は <a href="hid00023.htm">オプション設定 - フォント・配色</a> または <a
+    <dd>"［＃～］" という書式を含むテキストファイル(.txt)を青空文庫形式とみなし、以下のように表示します。<br>
+      "［＃～］" 部分はコメント色で、"《～》" 部分はルビ色で表示します(色は <a href="hid00023.htm">オプション設定 - フォント・配色</a> または <a
         href="hid00006.htm#SetColor">SetColor</a> コマンドで設定)。<br>
       「字下げ」や「地からの字上げ」にほぼ対応しています。<br>
       <a href="hid00006.htm#FunctionList">FunctionList</a> コマンドでは見出し一覧を表示します。<br>
     </dd>
 
-    <dt class="no_bg"><img src="chkbox.png" alt=""> &quot;\&quot; を &quot;&#x2216&quot;(U+2216)で表示</dt>
-    <dd>日本語フォントで &quot;<b>\</b>&quot; として表示される文字(U+005C)を、&quot;<b>&#x2216</b>&quot;(U+2216) で代替表示します。<br>
+    <dt class="no_bg"><img src="chkbox.png" alt=""> "\" を "&#x2216"(U+2216)で表示</dt>
+    <dd>日本語フォントで "<b>\</b>" として表示される文字(U+005C)を、"<b>&#x2216</b>"(U+2216) で代替表示します。<br>
       変わるのは表示だけで、コピーした際の内容などは変化しません。<br>
       <div class="note_text">
         フォントによってはこの文字がない場合があります。
@@ -245,7 +245,7 @@
     </dd>
 
     <dt class="no_bg"><img src="chkbox.png" alt=""> .dfm ファイルの文字列値をデコード</dt>
-    <dd><b>.dfm</b> (Delphiフォームファイル)で用いられる &quot;#文字コード&quot; 形式の値表記を、実際の文字列に変換して表示します。<br>
+    <dd><b>.dfm</b> (Delphiフォームファイル)で用いられる "#文字コード" 形式の値表記を、実際の文字列に変換して表示します。<br>
       <div class="note_text">
         コピーした場合、元の内容と異なりますので注意してください。<br>
       </div>
