--- a/help/src/hid00022.htm
+++ b/help/src/hid00022.htm
@@ -63,7 +63,7 @@
         ScrollUp/ScrollDown、Ctrl+ ZoomIn/ZoomOut)</span></dt>
     <dd>マウスホイールを回転したときに実行するコマンドを設定します。<span class="btn_frame">Ctrl</span>、<span
         class="btn_frame">Shift</span>キーとの組み合わせにより、4通りの動作が可能です。<br>
-      コマンドの組み合わせをコンボボックスで選択してください。&quot;上回転時のコマンド/下回転時のコマンド&quot;という書式で任意のコマンドを設定することもできます。<br>
+      コマンドの組み合わせをコンボボックスで選択してください。"上回転時のコマンド/下回転時のコマンド"という書式で任意のコマンドを設定することもできます。<br>
       <b>例</b> <span class="inp_box">ToParent/BackDirHist</span><br>
 
       <div class="info_text">
@@ -94,7 +94,7 @@
         ScrollUp/ScrollDown、Ctrl+ ZoomIn/ZoomOut、Shift+ PageUp/PageDown)</span></dt>
     <dd>マウスホイールを回転したときに実行するコマンドを設定します。<span class="btn_frame">Ctrl</span>、<span
         class="btn_frame">Shift</span>キーとの組み合わせにより、4通りの動作が可能です。<br>
-      コマンドの組み合わせをコンボボックスで選択してください。&quot;上回転時のコマンド/下回転時のコマンド&quot;という書式で任意のコマンドを設定することもできます。<br>
+      コマンドの組み合わせをコンボボックスで選択してください。"上回転時のコマンド/下回転時のコマンド"という書式で任意のコマンドを設定することもできます。<br>
     </dd>
 
     <dt class="no_bg_indent1">ホイールによるスクロール行数 <img src="edit.png" alt="">　<span class="def_text">(デフォルト: 3)</span></dt>
@@ -120,7 +120,7 @@
     </dt>
     <dd>マウスホイールを回転したときに実行するコマンドを設定します。<span class="btn_frame">Ctrl</span>、<span
         class="btn_frame">Shift</span>キーとの組み合わせにより、4通りの動作が可能です。<br>
-      コマンドの組み合わせをコンボボックスで選択してください。&quot;上回転時のコマンド/下回転時のコマンド&quot;という書式で任意のコマンドを設定することもできます。<br>
+      コマンドの組み合わせをコンボボックスで選択してください。"上回転時のコマンド/下回転時のコマンド"という書式で任意のコマンドを設定することもできます。<br>
     </dd>
     <dt class="no_bg_indent1">ホイールボタン <img src="combobox.png" alt="">　<span class="def_text">(デフォルト: FittedSize)</span></dt>
     <dd>ホイールボタンを押したときに実行するコマンドを設定します。</dd>
