--- a/help/src/hid00060.htm
+++ b/help/src/hid00060.htm
@@ -88,9 +88,9 @@
 
     <dt class="no_bg">ワークリストファイル</dt>
     <dd>
-      ワークリストの内容は、デフォルトでは、<b>NyanFi</b> のあるディレクトリに &quot;<b>WORKLIST.nwl</b>&quot; という名前で終了時に保存されます。<br>
+      ワークリストの内容は、デフォルトでは、<b>NyanFi</b> のあるディレクトリに "<b>WORKLIST.nwl</b>" という名前で終了時に保存されます。<br>
       これは、登録されている項目を一行ずつフルパス付ファイル名で記述したものです。エイリアスが設定されている場合は、ファイル名の後に TAB で区切って付加されます。またセパレータは、ファイル名無しでエイリアスが
-      &quot;<b>-</b>&quot; になります(行頭 TAB に -)。ファイルは直接編集してもかまいません。<br>
+      "<b>-</b>" になります(行頭 TAB に -)。ファイルは直接編集してもかまいません。<br>
 
       <div class="spc_box">
         <b>例</b>: <small><span class="ctrl_text">[TAB]</span> はタブ文字</small>
