--- a/help/src/hid00065.htm
+++ b/help/src/hid00065.htm
@@ -63,7 +63,7 @@
         <b>例</b>: <span class="inp_box">FF 11?????? 8?</span><br>
       </div>
       <div class="mgn_btm_h">
-        検索語が引用符( &quot; または ' )で囲まれている場合は、文字列を指定コードでエンコードしたバイト列として検索します。<br>
+        検索語が引用符( " または ' )で囲まれている場合は、文字列を指定コードでエンコードしたバイト列として検索します。<br>
       </div>
       マッチするとそのアドレスに移動しますが、マッチ部分の強調表示は行われません。<br>
       検索語欄にフォーカスがある場合<span class="btn_frame">Ctrl</span>+<span class="btn_frame">B</span>キーでも切り替えられます。<br>
