--- a/help/src/hid00083.htm
+++ b/help/src/hid00083.htm
@@ -66,9 +66,9 @@
 
   <p>
     キーワードを入力すると、それが含まれるタグ名の候補が下の一覧に表示されます(インクリメンタルサーチ)。<br>
-    複数のキーワードを空白で区切って入力すると<b>AND</b>検索、&quot;<b>|</b>&quot; で区切ると<b>OR</b>検索になります。区切りが混在しているその場合は、空白(AND)の方が |
+    複数のキーワードを空白で区切って入力すると<b>AND</b>検索、"<b>|</b>" で区切ると<b>OR</b>検索になります。区切りが混在しているその場合は、空白(AND)の方が |
     (OR)よりも優先順位が高くなります。<br>
-    <b>例</b>: &quot;set&quot; と &quot;nyan&quot; の両方が含まれているか、&quot;get&quot; と &quot;nyan&quot; の両方が含まれている。<br>
+    <b>例</b>: "set" と "nyan" の両方が含まれているか、"get" と "nyan" の両方が含まれている。<br>
     　<span class="inp_box">set nayn|get nyan</span><br>
     <br>
 
