--- a/help/src/hid00085.htm
+++ b/help/src/hid00085.htm
@@ -24,9 +24,11 @@
   </p>
 
   <p>
-    画面の右側には、正規表現のメタ文字やエスケープシーケンスなどの簡単な説明が一覧表示されています。<br>
-    また一覧の下部には、いくつかのサンプルパターンもあります。<br>
-    項目をクリックすると、その内容が、<b>パターン</b>欄のキャレット位置に挿入されます。<br>
+    画面右側の上部には、正規表現のメタ文字の簡単な説明が一覧表示されています。また下部には、いくつかのサンプルパターンがあります。<br>
+    項目をダブルクリックすると、その内容が<b>パターン</b>欄のキャレット位置に挿入されます。<br>
+    下部のサンプルパターンの内容は、右クリックメニューの「<b>ファイルから読み込む</b>」で変更可能です。<br>
+    ファイルに "説明<span class="ctrl_text">[TAB]</span>正規表現" とうい形式の行があれば、ダブルクリックで同様に挿入できます。<br>
+    なお、「<b>編集</b>」で内容を変更してサンプルファイルのタイムスタンプが変化した場合、チェッカーがアクティブになったとき自動的に再読み込みされます。<br>
   </p>
 
   <p class="info_text">
@@ -56,16 +58,16 @@
   <p>
     <span class="btn_frame">コピー</span>ボタンを押すと、パターンがクリップボードにコピーされます。<br>
 
-    <span class="btn_frame">コピー(C文字列)</span>ボタンを押すと、パターン内の <b>\</b> を <b>\\</b>、<b>&quot;</b> を
-    <b>\&quot;</b>に変え、全体をダブルクォーテーションで囲ったものがコピーされます。
+    <span class="btn_frame">コピー(C文字列)</span>ボタンを押すと、パターン内の <b>\</b> を <b>\\</b>、<b>"</b> を
+    <b>\"</b>に変え、全体をダブルクォーテーションで囲ったものがコピーされます。
     <br>
 
-    入力欄の右クリックメニューからチェッカーを開いている場合、<span class="btn_frame">貼り付け</span>ボタンを押すと、その入力欄にパターンを貼り付けて画面を閉じます。
+    入力欄の右クリックメニューからチェッカーを開いている場合、<span class="btn_frame">貼り付け</span>ボタンを押すと、その入力欄にパターンを貼り付けてチェッカーを閉じます。
   </p>
 
   <p>
-    検索対象と結果リストの高さ配分や、右側一覧の幅は、マウスで変更できます。<br>
-    検索対象と結果リストは等幅フォントで表示されます(テキストビュアーのものを利用、サイズはダイアログのフォントと同じ)。
+    検索対象と結果リストの高さ配分や、右側一覧の幅および高さ配分は、マウスで変更できます。<br>
+    入力欄や各リストは等幅フォントで表示されます(テキストビュアーのものを利用、サイズはダイアログのフォントと同じ)。
   </p>
 
   <dl>
